<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优市订货</string>
    <string name="back_exit_tips">再按一次退出本应用</string>
    <string name="get_sms_code">获取验证码</string>

    <!-- ************************ 对话框文字 ************************ -->
    <string name="version_name">1.1.2</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="loginout">退出登录</string>
    <string name="alert_photo_name_err">图片下载地址信息错误，请重试或者联系客服人员。</string>
    <string name="alert_retry">重试</string>
    <string name="alert_download">下载</string>
    <string name="alert_version_have_new">我们非常抱歉的通知您，您目前安装使用的本软件版本过低，已无法为您提供正常的服务，请务必进行升级，否则将无法正常使用本软件。</string>
    <string name="alert_net_err_notice">对不起，您的手机无法链接我们的服务器，我们建议您多次点击重试无效后按取消退出后检查网络环境！</string>
    <string name="return_before_url">返回上一级操作地址</string>
    <string name="alert_title_exit">退出程序</string>
    <string name="alert_title_notice">消息提醒</string>
    <string name="alert_msg_exit">您将要退出程序，按确定退出，按取消返回。</string>
    <string name="alert_title_loginout">账户登出</string>
    <string name="alert_msg_loginout">您将要注销并登出现有账户，按确认键注销，按取消返回。</string>
    <string name="repayment_note">手续费用收取规则如下：\n1000元以下：1元\n1000~5000元：1.5元\n5000元以上：2元 </string>
    <string name="system_update">系统更新</string>
    <string name="soft_update_title">提示</string>
    <string name="soft_update_info">您的版本需要更新</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="title_activity_info_complete">InfoCompleteActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="please_enter_the_mobile_phone_number_change">请输入更改的手机号</string>
    <string name="please_enter_the_sms_verification_code">请输入短信验证码</string>
    <string name="please_enter_the_payment_password">请输入支付密码</string>
    <string name="password_to_modify">登录密码修改</string>
    <string name="the_payment_password_to_modify">支付密码修改</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="please_enter_the_old_password">请输入原密码</string>
    <string name="please_enter_the_new_password">请输入新密码</string>
    <string name="please_enter_the_confirm_password">请输入确认密码</string>
    <string name="change_the_mobile_phone_number_to_bind">更改绑定手机号</string>

</resources>